// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App.styles > AppWrapper drops the backdrop once the map is visible 1`] = `
.c0 {
  position: relative;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
  background: var(--pf-bg);
}

<div
  class="c0"
/>
`;

exports[`App.styles > AppWrapper renders a div with the striped backdrop before the map loads 1`] = `
.c0 {
  position: relative;
  width: 100vw;
  height: 100svh;
  overflow: hidden;
  background: linear-gradient(           rgba(239, 231, 211, 0.1),           rgba(239, 231, 211, 0.1)         ),repeating-linear-gradient(           110deg,           var(--pf-marigold) 0 36px,           var(--pf-tomato) 36px 72px,           var(--pf-court-blue) 72px 108px,           var(--pf-midnight) 108px 144px,           var(--pf-ivory) 144px 180px         );
}

<div
  class="c0"
/>
`;

exports[`App.styles > ErrorBanner renders a p and matches snapshot 1`] = `
.c0 {
  margin: 0;
  background: var(--pf-card);
  border-left: 4px solid var(--pf-tomato);
  border-radius: var(--pf-radius-sm);
  padding: 10px 14px;
  font-size: 0.8125rem;
  color: var(--pf-text);
  box-shadow: 0 2px 8px rgba(30, 45, 73, 0.18);
}

<p
  class="c0"
>
  Something went wrong
</p>
`;

exports[`App.styles > HeaderCard renders a header and matches snapshot 1`] = `
.c0 {
  background: var(--pf-card);
  border: 1px solid var(--pf-border-soft);
  border-radius: var(--pf-radius-md);
  padding: 12px 16px;
  box-shadow: 0 2px 12px rgba(30, 45, 73, 0.18);
  text-align: center;
}

<header
  class="c0"
/>
`;

exports[`App.styles > MapDiv renders a div and matches snapshot when hidden 1`] = `
.c0 {
  position: absolute;
  inset: 0;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.4s ease;
}

<div
  class="c0"
/>
`;

exports[`App.styles > MapDiv renders a div and matches snapshot when visible 1`] = `
.c0 {
  position: absolute;
  inset: 0;
  opacity: 1;
  visibility: visible;
  transition: opacity 0.4s ease;
}

<div
  class="c0"
/>
`;

exports[`App.styles > OverlayTop renders a div and matches snapshot 1`] = `
.c0 {
  position: absolute;
  top: 16px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 10;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  gap: 8px;
  width: min(400px, calc(100vw - 32px));
}

<div
  class="c0"
/>
`;

exports[`App.styles > Tagline renders a p and matches snapshot 1`] = `
.c0 {
  margin: 2px 0 0;
  font-size: 0.9375rem;
  font-weight: 500;
  color: var(--pf-text-muted);
}

<p
  class="c0"
>
  Find pickleball courts near you
</p>
`;

exports[`App.styles > Wordmark renders an h1 and matches snapshot 1`] = `
.c0 {
  margin: 0;
  font-family: var(--pf-font-accent);
  font-weight: 600;
  font-size: 2.4rem;
  line-height: 1.1;
  letter-spacing: 0;
  color: var(--pf-midnight);
}

<h1
  class="c0"
>
  Tickle My Pickle
</h1>
`;
